--- a/pom.xml
+++ b/pom.xml
@@ -364,6 +364,18 @@
       <version>1.14</version>
       <scope>compile</scope>
     </dependency>
+    <!--Swagger-UI API文档生产工具 begin -->
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>2.7.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+      <version>2.7.0</version>
+    </dependency>
+    <!--Swagger-UI API文档生产工具 end -->
   </dependencies>
 
   <build>
