--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
-    <org.springframework.version>4.2.2.RELEASE</org.springframework.version>
+    <org.springframework.version>4.3.2.RELEASE</org.springframework.version>
   </properties>
 
   <dependencies>
@@ -31,6 +31,32 @@
           </exclusion>
         </exclusions>
       </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>${org.springframework.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>${org.springframework.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>${org.springframework.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-tx</artifactId>
+      <version>${org.springframework.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-orm</artifactId>
+      <version>${org.springframework.version}</version>
+    </dependency>
+
     <!--JSONObject对象依赖的jar包   begin-->
     <dependency>
       <groupId>commons-beanutils</groupId>
@@ -343,7 +369,6 @@
         <version>2.7.0</version>
       </dependency>
 
-
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
@@ -386,6 +411,9 @@
       <version>1.1.4c</version>
     </dependency>
     <!-- xstream文件end -->
+
+
+
 
   </dependencies>
 
