--- a/pom.xml
+++ b/pom.xml
@@ -412,6 +412,28 @@
     </dependency>
     <!-- xstream文件end -->
 
+    <!--html解析begin-->
+    <!--Jsoup-->
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.10.3</version>
+    </dependency>
+    <!--html解析end-->
+
+    <!--WebMagic-->
+    <dependency>
+      <groupId>us.codecraft</groupId>
+      <artifactId>webmagic-core</artifactId>
+      <version>0.7.3</version>
+    </dependency>
+    <dependency>
+      <groupId>us.codecraft</groupId>
+      <artifactId>webmagic-extension</artifactId>
+      <version>0.7.3</version>
+    </dependency>
+
+
 
 
 
